<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mv_citie"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/gd_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.MainActivity" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mv_citie" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_air_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/air_temperature"
            app:layout_constraintEnd_toEndOf="@+id/tv_description"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_min_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/min_air_temperature"
            app:layout_constraintEnd_toEndOf="@+id/tv_air_temperature"
            app:layout_constraintStart_toStartOf="@+id/tv_air_temperature"
            app:layout_constraintTop_toBottomOf="@+id/tv_air_temperature" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_max_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/max_air_temperature"
            app:layout_constraintEnd_toEndOf="@+id/tv_min_temperature"
            app:layout_constraintStart_toStartOf="@+id/tv_min_temperature"
            app:layout_constraintTop_toBottomOf="@+id/tv_min_temperature" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/humidity"
            app:layout_constraintEnd_toEndOf="@+id/tv_max_temperature"
            app:layout_constraintStart_toStartOf="@+id/tv_max_temperature"
            app:layout_constraintTop_toBottomOf="@+id/tv_max_temperature" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/wind_speed"
            app:layout_constraintEnd_toEndOf="@+id/tv_humidity"
            app:layout_constraintStart_toStartOf="@+id/tv_humidity"
            app:layout_constraintTop_toBottomOf="@+id/tv_humidity" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
